# ai-transcript

./: .gitignore  IMPLEMENTATION_PLAN.md  README.md  pyproject.toml  ref.md
.claude/: CLAUDE.md
src/aitranscript/cli/: main.py
src/aitranscript/core/: audio_extractor.py  subtitle_generator.py  transcriber.py  vad_processor.py
src/aitranscript/models/: config.py  segment.py
src/aitranscript/pipeline/: transcription_pipeline.py
src/aitranscript/utils/: file_utils.py  logger.py  validators.py
tests/: conftest.py  test_audio_extractor.py  test_cli.py  test_config.py  test_file_utils.py  test_pipeline.py  test_segment.py  test_subtitle_generator.py  test_transcriber.py  test_vad_processor.py  test_validators.py
